Reporting Refactoring der ReportParameter für Server-Driven-UI
Co-authored-by: Michael <git@pluemper.name>